MDEV-5419 no audit events for warnings converted to errors in the strict mode.         Plugins get error notifications only when my_message_sql() is called.         But errors are launched with THD::raise_condition() calls in other         places. These are push_warning(), implementations of SIGNAL and         RESIGNAL commands.         So it makes sence to notify plugins there in THD::raise_condition().